Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.1
-
None
Description
When calling stop() on the TThreadedServer no interrupts are sent to the client threads. This means the stop() call blocks on tasksMonitor.wait() until all client naturally disconnect.
How can we tell the client thread connections to close/exit during the TThreadedServer::stop() call?
Attachments
Attachments
Issue Links
- blocks
-
THRIFT-3081 C++ Consolidate client processing loops in TServers
- Closed
- is duplicated by
-
THRIFT-3447 Cannot shutdown TThreadPoolServer when clients are still connected
- Closed
-
THRIFT-2099 Stop TThreadPoolServer with alive connections.
- Closed
- is related to
-
THRIFT-3590 TPipeServer: stop() does not work when clients are connected
- Open
-
THRIFT-3061 C++ TSSLSocket shutdown delay/vulnerability
- Closed
-
THRIFT-3970 Server does not limititate client connections
- Closed
- relates to
-
THRIFT-4500 Unable to stop socket server while there are connected clients
- Open
-
THRIFT-4252 Cannot shutdown Java server when clients are still connected
- Closed