THRIFT-2441 ccp: Cannot shutdown TThreadedServer when clients are still connected